fix: Don't render bottom margin on the last <p> of rendered markdown to prevent unnecessary whitespace that has been annoying Mick for years

--- a/app/assets/stylesheets/shared_additions.scss
+++ b/app/assets/stylesheets/shared_additions.scss
@@ -1,3 +1,7 @@
+.markdown-body > p:last-child {
+  margin-bottom: 0;
+}
+
 .no-wrap {
     white-space: nowrap
 }
